all project revize

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,11 @@ jwt.secret=hamitmizrak
 
 
 ########################################################################
+### Thymeleaf  ########################################################
+spring.thymeleaf.enabled=true
+
+
+########################################################################
 ### Database  ########################################################
 ## H2Database
 logging.level.org.springframework.jdbc.core = TRACE
