--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##########################################################################
 ### System config ########################################################
-# Port
+# Port 0<x<65535
 server.port=8080
 
 # White label
