Hibernate Annotation @Entity @Table @Id @column ...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,11 +46,9 @@ logging.level.org.springframework.jdbc.core = TRACE
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show_sql = true
 
-
 # önce create sonra  durdur update yap
 #jpa > none update create, create-drop, validate
-spring.jpa.hibernate.ddl-auto = update
-
+spring.jpa.hibernate.ddl-auto = create
 
 ## Generic JNDI Data Source
 ##in Memory
@@ -61,12 +59,19 @@ spring.jpa.hibernate.ddl-auto = update
 ##spring.datasource.url=jdbc:h2:file:~/denemedb
 ##Current Working Directory
 ## http://localhost:8080/h2-console
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./memory_persist/denemedb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:./memory_persist/denemedb
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+
+## Mysql
+##CREATE SCHEMA `employee_management_system` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 ## Postgresql
@@ -75,12 +80,7 @@ spring.h2.console.enabled=true
 #spring.datasource.password=postgres
 #spring.jpa.show-sql=true
 
-## Mysql
-##CREATE SCHEMA `employee_management_system` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
-#spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 
 # Oracle
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
