--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.jpa.properties.hibernate.show_sql = true
 
 # önce create sonra  durdur update yap
 #jpa > none update create, create-drop, validate
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 ## Generic JNDI Data Source
 ##in Memory
