--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--jackson: Restte default json yerine XML almak icin kullanıyoruz-->
+       <!-- <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>-->
+
+
         <!--  json web token JWT-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
